--- a/public/HTML/01-Home.html
+++ b/public/HTML/01-Home.html
@@ -11,43 +11,52 @@
   <div class="wrapper">
   	<!-- Header -->
   	<div class="header">
-    	<!-- Top Menu -->
-    	<div class="topnav">
+      <!-- Logo Start -->
+      <div class="logo">
+        <h1 class="hidetext"><a href="javascript:void(0);">شارك</a></h1>
       </div>
-      <!-- Top Menu End -->
-      <div class="headermain">
-      	<!-- Logo -->
-      	<div class="logo">
-        </div>
-        <!-- Logo End -->
-        <!-- Header Login -->
-        <div class="login">
-        </div>
-        <!-- Header Login End -->
+      <div class="banner">
+      	<h2 class="hidetext">شارك - أتبرع - إصنع فرق</h2>
       </div>
-      <!-- Navigation -->
-      <div class="navmain">
-      </div>
-      <!-- Navigation End -->
+      <div class="clear"></div>
+      <!-- Logo End -->
     </div>
     <!-- Header End -->
+      <!-- Navigation Start -->
+      <div class="navigation">
+        <!-- Navigation Menu Start -->
+        <ul class="nav">
+          <li class="current"><a href="javascript:void(0);">الرئيسية</a></li>
+          <li><a href="javascript:void(0);">عن الموقع</a></li>
+          <li><a href="javascript:void(0);">إحتياجات</a></li>
+          <li><a href="javascript:void(0);">أبلغ عن حالة</a></li>
+          <li><a href="javascript:void(0);">إنجازات</a></li>
+          <li><a href="javascript:void(0);">إتصل بنا</a></li>
+        </ul>
+        <!-- Navigation Menu End -->
+      </div>
+      <div class="clear"></div>
+      <!-- Navigation End -->
     <!-- Container -->
     <div class="container">
+
+
+
+
     	
     </div>
     <!-- Container End -->
     <!-- Footer -->
     <div class="footer">
-    	<div class="mainlinks">
+      <div class="copyright"> بيان الخصوصية | اتصل بنا | © 2011 جميع الحقوق محفوظة لشركة SHAREK. الملكية والإدارة لشركة SHAREK. تم تطويره بواسطة شركة ESpace</div>
+      <div class="social">
+      	<div class="facebook"><a href="javascript:void(0);" class="hidetext">Facebook</a></div>
+        <div class="twitter"><a href="javascript:void(0);" class="hidetext">Facebook</a></div>
+        <div class="clear"></div>
       </div>
-      <div class="sharelinks">
-      </div>
-      <div class="clear">
-      </div>
-      <div class="copyright">
-      </div>
+       
     </div>
 		<!-- Footer End -->
-  </div>
+</div>
 </body>
 </html>
