--- a/public/HTML/blog.html
+++ b/public/HTML/blog.html
@@ -4,22 +4,22 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Blog</title>
 <!--CSS -->
-<link href="./css/style.css" rel="stylesheet" type="text/css" />
-<link href="./css/colorbox.css" rel="stylesheet" type="text/css" />
+<link href="../stylesheets/style.css" rel="stylesheet" type="text/css" />
+<link href="../stylesheets/colorbox.css" rel="stylesheet" type="text/css" />
 <!--Js -->
-<script type="text/javascript" src="./js/jquery.js"></script>
-<script type="text/javascript" src="./js/cufon-yui.js"></script>
-<script type="text/javascript" src="./js/swiss.js"></script>
-<script type="text/javascript" src="./js/hoverIntent.js"></script>
-<script type="text/javascript" src="./js/functions.js"></script>
-<script type="text/javascript" src="./js/jquery.colorbox.js"></script>
+<script type="text/javascript" src="../javascripts/jquery.js"></script>
+<script type="text/javascript" src="../javascripts/cufon-yui.js"></script>
+<script type="text/javascript" src="../javascripts/swiss.js"></script>
+<script type="text/javascript" src="../javascripts/hoverIntent.js"></script>
+<script type="text/javascript" src="../javascripts/functions.js"></script>
+<script type="text/javascript" src="../javascripts/jquery.colorbox.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <!--wrapper -->
 <div id="outer_wrapper_inner">
   <div id="wrapper">
     <!--header -->
-    <div id="header"> <a href="./index.html"><img src="./images/logo.png" alt="" id="logo" /></a>
+    <div id="header"> <a href="./index.html"><img src="../images/logo.png" alt="" id="logo" /></a>
       <div id="right_header">
         <div id="top_nav">
           <ul>
@@ -90,7 +90,7 @@
     <div id="content">
       <!--banner section -->
       <div id="banner_wrapp_inner">
-        <div id="banner_inner"> <img src="./images/banner-inner1.jpg" alt="" /> </div>
+        <div id="banner_inner"> <img src="../images/banner-inner1.jpg" alt="" /> </div>
         <div id="heading_banner">BLOG</div>
       </div>
       <!--Left Content -->
@@ -102,9 +102,9 @@
           </div>
           <div class="blog_date">
             <p>Posted by Administrator Karen Mills on April 14, 2011 at 5:19 PM EDT</p>
-            <div class="social_panel"> <a href="#"><img src="./images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="./images/bg-facebook.gif" alt="" /></a> </div>
+            <div class="social_panel"> <a href="#"><img src="../images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="../images/bg-facebook.gif" alt="" /></a> </div>
           </div>
-          <div class="blog_content"> <img src="./images/img-blog.jpg" alt="" class="align_left" />
+          <div class="blog_content"> <img src="../images/img-blog.jpg" alt="" class="align_left" />
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare nibh et sem vulputate dictum. Integer congue leo elit, et tempor tellus. Cras tristique ultricies augue, quis rutrum purus semper non. Mauris vehicula dolor id magna posuere pellentesque. Etiam non augue eu purus volutpat sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at felis. Vestibulum vitae pretium eros sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at :: <a href="#">Read More</a></p>
           </div>
         </div>
@@ -114,7 +114,7 @@
           </div>
           <div class="blog_date">
             <p>Posted by Administrator Karen Mills on April 14, 2011 at 5:19 PM EDT</p>
-            <div class="social_panel"> <a href="#"><img src="./images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="./images/bg-facebook.gif" alt="" /></a> </div>
+            <div class="social_panel"> <a href="#"><img src="../images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="../images/bg-facebook.gif" alt="" /></a> </div>
           </div>
           <div class="blog_content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et odio a mi dictum pretium. Quisque odio risus, feugiat ut fermentum rhoncus, suscipit vel felis. Fusce non tellus eget massa consequat molestie. Cras ut velit quis magna luctus semper. Nunc pretium sem sit amet neque ornare luctus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Nam et porta libero. Aliquam risus nisi, elementum vel hendrerit quis, posuere non lacus. Vestibulum eu urna tellus. In hac habitasse platea dictumst. Vivamus in lorem ac nunc bibendum blandit. Nulla auctor aliquet dui, eget consequat ante tristique ut. Vestibulum sed nibh purus, eget viverra mauris. Nunc lobortis porta orci, eu luctus nunc tempus ut. Etiam venenatis adipiscing sagittis. Sed pretium sapien in massa mattis pretium.</p>
@@ -127,9 +127,9 @@
           </div>
           <div class="blog_date">
             <p>Posted by Administrator Karen Mills on April 14, 2011 at 5:19 PM EDT</p>
-            <div class="social_panel"> <a href="#"><img src="./images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="./images/bg-facebook.gif" alt="" /></a> </div>
+            <div class="social_panel"> <a href="#"><img src="../images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="../images/bg-facebook.gif" alt="" /></a> </div>
           </div>
-          <div class="blog_content"> <img src="./images/img-blog2.jpg" alt="" class="align_left" />
+          <div class="blog_content"> <img src="../images/img-blog2.jpg" alt="" class="align_left" />
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare nibh et sem vulputate dictum. Integer congue leo elit, et tempor tellus. Cras tristique ultricies augue, quis rutrum purus semper non. Mauris vehicula dolor id magna posuere pellentesque. Etiam non augue eu purus volutpat sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at felis. Vestibulum vitae pretium eros sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at :: <a href="#">Read More</a></p>
           </div>
         </div>
@@ -139,7 +139,7 @@
           </div>
           <div class="blog_date">
             <p>Posted by Administrator Karen Mills on April 14, 2011 at 5:19 PM EDT</p>
-            <div class="social_panel"> <a href="#"><img src="./images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="./images/bg-facebook.gif" alt="" /></a> </div>
+            <div class="social_panel"> <a href="#"><img src="../images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="../images/bg-facebook.gif" alt="" /></a> </div>
           </div>
           <div class="blog_content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et odio a mi dictum pretium. Quisque odio risus, feugiat ut fermentum rhoncus, suscipit vel felis. Fusce non tellus eget massa consequat molestie. Cras ut velit quis magna luctus semper. Nunc pretium sem sit amet neque ornare luctus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Nam et porta libero. Aliquam risus nisi, elementum vel hendrerit quis, posuere non lacus. Vestibulum eu urna tellus. In hac habitasse platea dictumst. Vivamus in lorem ac nunc bibendum blandit. Nulla auctor aliquet dui, eget consequat ante tristique ut. Vestibulum sed nibh purus, eget viverra mauris. Nunc lobortis porta orci, eu luctus nunc tempus ut. Etiam venenatis adipiscing sagittis. Sed pretium sapien in massa mattis pretium.</p>
@@ -160,7 +160,7 @@
       </div>
       <!--Right Content -->
       <div id="right_content">
-        <div class="banner_applynow"> <a href="#"> <img src="./images/img-applynow.jpg" alt="" /> <span>Apply now</span> </a> </div>
+        <div class="banner_applynow"> <a href="#"> <img src="../images/img-applynow.jpg" alt="" /> <span>Apply now</span> </a> </div>
         <div class="category_box">
           <div class="heading_box">
             <h2>Search Blogs</h2>
@@ -262,7 +262,7 @@
             <p><a href="#">@University college</a> By Simon Cole 11-04-2011</p>
             <p>“ Lorem ipsum dolor sit amet, ctetur adiiscing top of elit. Quisque sit amet sem felis  “</p>
             <em class="shoutright">&nbsp;</em> </div>
-          <div class="right_tweet"> <img src="./images/bg-tweet.png" alt="" />
+          <div class="right_tweet"> <img src="../images/bg-tweet.png" alt="" />
             <h3>Latest Tweet</h3>
           </div>
         </div>
@@ -272,10 +272,10 @@
               <li>
                 <h3>Follow Us</h3>
               </li>
-              <li><a href="#"><img src="./images/img-fb.png" alt="" /></a></li>
-              <li><a href="#"><img src="./images/img-tw.png" alt="" /></a></li>
-              <li><a href="#"><img src="./images/img-dg.png" alt="" /></a></li>
-              <li><a href="#"><img src="./images/img-ut.png" alt="" /></a></li>
+              <li><a href="#"><img src="../images/img-fb.png" alt="" /></a></li>
+              <li><a href="#"><img src="../images/img-tw.png" alt="" /></a></li>
+              <li><a href="#"><img src="../images/img-dg.png" alt="" /></a></li>
+              <li><a href="#"><img src="../images/img-ut.png" alt="" /></a></li>
             </ul>
           </div>
           <div class="right_links">
