--- a/public/HTML/blog.html
+++ b/public/HTML/blog.html
@@ -105,7 +105,7 @@
             <div class="social_panel"> <a href="#"><img src="../images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="../images/bg-facebook.gif" alt="" /></a> </div>
           </div>
           <div class="blog_content"> <img src="../images/img-blog.jpg" alt="" class="align_left" />
-            <p>Lorem  pretium eros sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at :: <a href="#">Read More</a></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare nibh et sem vulputate dictum. Integer congue leo elit, et tempor tellus. Cras tristique ultricies augue, quis rutrum purus semper non. Mauris vehicula dolor id magna posuere pellentesque. Etiam non augue eu purus volutpat sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at felis. Vestibulum vitae pretium eros sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at :: <a href="#">Read More</a></p>
           </div>
         </div>
         <div class="blog_box">
@@ -118,6 +118,7 @@
           </div>
           <div class="blog_content">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et odio a mi dictum pretium. Quisque odio risus, feugiat ut fermentum rhoncus, suscipit vel felis. Fusce non tellus eget massa consequat molestie. Cras ut velit quis magna luctus semper. Nunc pretium sem sit amet neque ornare luctus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Nam et porta libero. Aliquam risus nisi, elementum vel hendrerit quis, posuere non lacus. Vestibulum eu urna tellus. In hac habitasse platea dictumst. Vivamus in lorem ac nunc bibendum blandit. Nulla auctor aliquet dui, eget consequat ante tristique ut. Vestibulum sed nibh purus, eget viverra mauris. Nunc lobortis porta orci, eu luctus nunc tempus ut. Etiam venenatis adipiscing sagittis. Sed pretium sapien in massa mattis pretium.</p>
+            <p>Nullam lorem sem, convallis vel dignissim sit amet, congue ut elit. Nullam in libero dui. Sed eleifend vehicula leo, in ornare metus auctor nec. Etiam nisl augue, hendrerit blandit egestas nec, facilisis non turpis. Proin feugiat arcu varius tortor eleifend tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum lobortis enim ac quam congue in suscipit purus porttitor. Sed iaculis enim id eros venenatis ac volutpat sem volutpat. Curabitur mi nisi, volutpat id convallis quis, lobortis et purus. Curabitur accumsan dolor ac massa suscipit imperdiet. Aenean pellentesque magna non quam dictum pharetra. Nunc adipiscing rhoncus metus suscipit ullamcorper. Aliquam pellentesque porttitor lacus id ultrices. Sed nec ligula erat. Aliquam non justo sed enim vestibulum molestie vel ut purus. <a href="#">Read More</a></p>
           </div>
         </div>
         <div class="blog_box">
@@ -129,7 +130,7 @@
             <div class="social_panel"> <a href="#"><img src="../images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="../images/bg-facebook.gif" alt="" /></a> </div>
           </div>
           <div class="blog_content"> <img src="../images/img-blog2.jpg" alt="" class="align_left" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare nibh et sem vulputate risus arcu congue nibh, sit amet laoreet est lacus at :: <a href="#">Read More</a></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare nibh et sem vulputate dictum. Integer congue leo elit, et tempor tellus. Cras tristique ultricies augue, quis rutrum purus semper non. Mauris vehicula dolor id magna posuere pellentesque. Etiam non augue eu purus volutpat sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at felis. Vestibulum vitae pretium eros sodales nec nec diam. Proin laoreet, tellus eget adipiscing ultrices, risus arcu congue nibh, sit amet laoreet est lacus at :: <a href="#">Read More</a></p>
           </div>
         </div>
         <div class="blog_box">
@@ -141,8 +142,8 @@
             <div class="social_panel"> <a href="#"><img src="../images/bg-tweet.gif" alt="" /></a> <a href="#"><img src="../images/bg-facebook.gif" alt="" /></a> </div>
           </div>
           <div class="blog_content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et odio a mi dictum pretium. Quisque odio risus, feugiat ut fermentum rhoncus, suscipit vel felis. Fusce non tellus eget massa consequat tempus ut. Etiam venenatis adipiscing sagittis. Sed pretium sapien in massa mattis pretium.</p>
-            <p>Nullam lorem sem, convallis vel dignissim sit amet, congue ut elit. Nullam in libero dui. Sed eleifend vehicula leo, in ornare metus auctor nec. Etiam nisl augue, hendrerit blandit egestas nec, facilisis porttitor lacus id ultrices. Sed nec ligula erat. Aliquam non justo sed enim vestibulum molestie vel ut purus. <a href="#">Read More</a></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et odio a mi dictum pretium. Quisque odio risus, feugiat ut fermentum rhoncus, suscipit vel felis. Fusce non tellus eget massa consequat molestie. Cras ut velit quis magna luctus semper. Nunc pretium sem sit amet neque ornare luctus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Nam et porta libero. Aliquam risus nisi, elementum vel hendrerit quis, posuere non lacus. Vestibulum eu urna tellus. In hac habitasse platea dictumst. Vivamus in lorem ac nunc bibendum blandit. Nulla auctor aliquet dui, eget consequat ante tristique ut. Vestibulum sed nibh purus, eget viverra mauris. Nunc lobortis porta orci, eu luctus nunc tempus ut. Etiam venenatis adipiscing sagittis. Sed pretium sapien in massa mattis pretium.</p>
+            <p>Nullam lorem sem, convallis vel dignissim sit amet, congue ut elit. Nullam in libero dui. Sed eleifend vehicula leo, in ornare metus auctor nec. Etiam nisl augue, hendrerit blandit egestas nec, facilisis non turpis. Proin feugiat arcu varius tortor eleifend tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum lobortis enim ac quam congue in suscipit purus porttitor. Sed iaculis enim id eros venenatis ac volutpat sem volutpat. Curabitur mi nisi, volutpat id convallis quis, lobortis et purus. Curabitur accumsan dolor ac massa suscipit imperdiet. Aenean pellentesque magna non quam dictum pharetra. Nunc adipiscing rhoncus metus suscipit ullamcorper. Aliquam pellentesque porttitor lacus id ultrices. Sed nec ligula erat. Aliquam non justo sed enim vestibulum molestie vel ut purus. <a href="#">Read More</a></p>
           </div>
         </div>
         <div class="pager">
